--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^2.3.3",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1",
+    "vue-session": "^0.9.4",
     "vuefire": "^1.4.3"
   },
   "devDependencies": {
