--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap-vue": "^0.16.1",
     "firebase": "^4.1.3",
     "vue": "^2.3.3",
+    "vue-easy-toast": "^1.0.2",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.3.1",
     "vue-session": "^0.9.4",
